tests/paczka1/small_fuzzy/18670791.err
Error in line 6: JtYRAS A364 73,0
Error in line 14: afatW A360 3,2
